--- a/index.html
+++ b/index.html
@@ -57,7 +57,59 @@
     <!-- End of navbar -->
 
     <!-- Start of container -->
-   
+    <div class="container">
+        <div class="row">
+          <div class="col-sm-12 col-md-8">
+              <div class=box>
+                <h3>Summary: Latitude vs. X</h3>
+                <hr>
+                <div class="col-6">
+                <img class="img float-left" src="Resources/assets/images/Fig1.png" alt="Latitude vs X">
+                </div>
+                <p>The purpose of this project was to analyse how weather changes as you get closer to the equator. To
+                accomplish this analysis, we first pulled data from OpenWeatherMap API to assemble a dataset on over 500 cities.
+                </p>
+                
+                <p>After assembling the dataset, we used MatPlotLib to plot various aspects of the weather vs. latitute. Factors we
+                looked at included: temperature, cloudiness, wind speed, and humidity. This website provides the source data and
+                visualizations created as part of the analysis, as well as explanations and descriptions of
+                trends and correlations witnessed.</p>
+          </div>
+        </div>
+          <div class="col-sm-12 col-md-4">
+             <!-- Start of Visualizations imageNav Area -->
+          <div class=box>
+          <section id="imageNav-area">
+            <div class="imageNav-content">
+              <h4 class="imageNav-header">Visualizations</h4>
+              <hr>
+              <div class="container">
+			           <div class="row">
+				        <div class="col-6">
+                    <a href="temp.html">
+				            <img src="Resources/assets/images/Fig1.png" alt="Latitude vs. Max Temperature",  class="imageNav-photo">
+				            </a>
+				        </div>
+				        <div class="col-6">
+                    <a href="humidity.html">
+				            <img src="Resources/assets/images/Fig2.png" alt="Latitude vs. Humidity",  class="imageNav-photo">
+			              </a>
+                </div>
+				        <div class="col-6">
+                    <a href="cloudiness.html">
+				            <img src="Resources/assets/images/Fig3.png" alt="Latitude vs. Cloudiness",  class="imageNav-photo">
+				            </a>
+				        </div>
+				        <div class="col-6">
+                    <a href="wind.html">
+				            <img src="Resources/assets/images/Fig4.png" alt="Latitude vs. Wind Speed",  class="imageNav-photo">
+				            </a>
+				        </div>
+                </div>
+			        </div>
+              </div>
+            </div>
+          </div>
     <!-- End of container -->
 
     <!-- Start of footer -->
