--- a/wind.html
+++ b/wind.html
@@ -57,7 +57,54 @@
     <!-- End of navbar -->
 
     <!-- Start of container -->
-    
+    <div class="container">
+      <div class="row">
+        <div class="col-sm-12 col-md-8">
+            <div class=box>
+              <h3>Wind Speed</h3>
+              <hr>
+              <div class="col-8">
+              <img src="Resources/assets/images/Fig4.png" alt="Wind Speed">
+              </div>
+              <p>There does not appear to be a strong correlation between latitude and wind speed.</p>
+          </div>
+        </div>
+        <div class="col-sm-12 col-md-4">
+           <!-- Start of Visualizations imageNav Area -->
+           <div class=box>
+              <section id="imageNav-area">
+                <div class="imageNav-content">
+                  <h3 class="imageNav-header">Visualizations</h3>
+                  <hr>
+                  <div class="container">
+                    <div class="row">
+                    <div class="col-6">
+                        <a href="temp.html">
+                        <img src="Resources/assets/images/Fig1.png" alt="Latitude vs. Max Temperature",  class="imageNav-photo">
+                        </a>
+                    </div>
+                    <div class="col-6">
+                        <a href="humidity.html">
+                        <img src="Resources/assets/images/Fig2.png" alt="Latitude vs. Humidity",  class="imageNav-photo">
+                        </a>
+                    </div>
+                    <div class="col-6">
+                        <a href="cloudiness.html">
+                        <img src="Resources/assets/images/Fig3.png" alt="Latitude vs. Cloudiness",  class="imageNav-photo">
+                        </a>
+                    </div>
+                    <div class="col-6">
+                        <a href="wind.html">
+                        <img src="Resources/assets/images/Fig4.png" alt="Latitude vs. Wind Speed",  class="imageNav-photo">
+                        </a>
+                    </div>
+                  </div>
+              </div>
+            </div>
+            </div>
+          </div>
+      </div>
+    </div>
     <!-- End of container -->
 
     <!-- Start of footer -->
