--- a/cloudiness.html
+++ b/cloudiness.html
@@ -1,19 +1,21 @@
 <!DOCTYPE html>
 <html lang="en-us">
   <head>
-
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
 
-    <title>Bootstrap Visualization Dashboard</title>
+    <title>GA Tech Bootstrap Visualization Dashboard by Joe Johnson</title>
+
+    <link rel="stylesheet" href="reset.css">
 
     <!-- Boostrap Stylesheet -->
     <link rel="stylesheet" href="css/bootstrap.min.css" media="screen">
-
+    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
     <!-- Our own CSS stylesheet -->
     <link rel="stylesheet" href="css/styles.css" media="screen">
-
   </head>
 
   <body>
@@ -66,7 +68,7 @@
               <div class="col-8">
               <img src="Resources/assets/images/Fig3.png" alt="Cloudiness">
               </div>
-              <p>There is no very obvious association between latitude and cloudiness. Many cities aggregate along the cloudiness 0, 20, 40, ~78, 100 to form a horizontal line.</p>
+              <p>There does not appear to be a very strong correlation between latitude and cloudiness.</p>
           </div>
         </div>
         <div class="col-sm-12 col-md-4">
