--- a/comparison.html
+++ b/comparison.html
@@ -1,19 +1,21 @@
 <!DOCTYPE html>
 <html lang="en-us">
   <head>
-
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
 
-    <title>Bootstrap Visualization Dashboard</title>
+    <title>GA Tech Bootstrap Visualization Dashboard by Joe Johnson</title>
+
+    <link rel="stylesheet" href="reset.css">
 
     <!-- Boostrap Stylesheet -->
     <link rel="stylesheet" href="css/bootstrap.min.css" media="screen">
-
+    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
     <!-- Our own CSS stylesheet -->
     <link rel="stylesheet" href="css/styles.css" media="screen">
-
   </head>
 
   <body>
@@ -57,7 +59,52 @@
     <!-- End of navbar -->
 
     <!-- Start of container -->
-   
+    <div class="container">
+      <section class="row">
+        <div class=box>
+        <div>
+          <div class="description-content">
+            <h3 class="description-header">Comparison: Latitude vs X</h3>
+            <hr>
+			        <p>Click any plot to get an in-depth analysis.</p>
+                        <div class="container">
+                          <div class="row">
+                            <div class="col-lg-6">
+                              <div class="imageNav-header">vs. Max Temperature
+                              </div>
+                              <a href="temp.html">
+                              <img src="Resources/assets/images/Fig1.png" alt="Latitude vs. Max Temperature", class="imageNav-photo">
+                              </a>
+                            </div>
+                            <div class="col-lg-6">
+                              <div class="imageNav-header">vs. Max Humidity
+                              </div>
+                              <a href="humidity.html">
+                              <img src="Resources/assets/images/Fig2.png" alt="Latitude vs. Humidity",  class="imageNav-photo">
+                              </a>
+                            </div>
+                            <div class="col-lg-6">
+                              <div class="imageNav-header">vs. Cloudiness
+                              </div>
+                              <a href="cloudiness.html">
+                              <img src="Resources/assets/images/Fig3.png" alt="Latitude vs. Cloudiness", class="imageNav-photo">
+                              </a>
+                            </div>
+                            <div class="col-lg-6">
+                              <div class="imageNav-header">vs. Wind Speed
+                              </div>
+                              <a href="wind.html">
+                              <img src="Resources/assets/images/Fig4.png" alt="Latitude vs. Wind Speed",  class="imageNav-photo">
+                              </a>
+                            </div>
+                            </div>
+                          </div>
+			      </div>
+        </div>
+
+        </div>
+      </section>
+    </div>
     <!-- End of container -->
 
     <!-- Start of footer -->
