--- a/index.html
+++ b/index.html
@@ -45,10 +45,10 @@
               <li class="dropdown">
                 <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Plots <span class="caret"></span></a>
                 <ul class="dropdown-menu">
-                 <li><a href="temp.html">Max Temperature</a></li>
-                  <li><a href="humidity.html">Humidity</a></li>
-                  <li><a href="cloudiness.html">Cloudiness</a></li>
-                  <li><a href="wind.html">Wind Speed</a></li>
+                 <li><a class="dropdown-item" href="temp.html">Max Temperature</a></li>
+                  <li><a class="dropdown-item" href="humidity.html">Humidity</a></li>
+                  <li><a class="dropdown-item" href="cloudiness.html">Cloudiness</a></li>
+                  <li><a class="dropdown-item" href="wind.html">Wind Speed</a></li>
                 </ul>
               </li>
               <li><a href="comparison.html">Comparison</a></li>
