--- a/temp.html
+++ b/temp.html
@@ -72,7 +72,7 @@
           </div>
         </div>
         <div class="col-sm-12 col-md-4">
-           <!-- Start of Visualizations imageNav Area -->
+           <!-- Image Navigation -->
            <div class=box>
               <section id="imageNav-area">
                 <div class="imageNav-content">
